--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -213,8 +213,23 @@ a.linkUrl:last-child {
 }
 
 .googleLoginBtn {
-  width: 80px;
-  height: 80px !important;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100% !important;
+  z-index: 2;
+  transition:
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+}
+
+.googleLoginBtn > div {
+  opacity: 0;
 }
 
 .googleLoginBtn > div,
@@ -224,58 +239,6 @@ a.linkUrl:last-child {
   height: 100%;
 }
 
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-bN97Pc-sM5MNb {
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe-BPrWId {
-  font-size: 0;
-  width: 100%;
-}
-
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe-BPrWId:before {
-  content: 'Google';
-  font-weight: 700;
-  line-height: 1.7142857142857142;
-  font-size: 0.875rem;
-  font-family:
-    Raleway,
-    Public Sans,
-    sans-serif;
-  color: inherit;
-  display: block;
-}
-
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe .nsm7Bb-HzV7m-LgbsSe-Bz112c {
-  margin-right: 0;
-  height: 24px;
-  width: 24px;
-  min-width: 24px;
-}
-
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe {
-  padding: 0;
-  border: 1px solid rgba(145, 158, 171, 0.32);
-  border-radius: 8px;
-  transition:
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-  padding-top: 5px;
-}
-
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe:hover,
-.nsm7Bb-HzV7m-LgbsSe:focus {
-  border-color: rgba(145, 158, 171, 0.32);
-}
-
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe:hover .nsm7Bb-HzV7m-LgbsSe-MJoBVe {
+.googleLoginBtn:hover {
   background-color: rgba(145, 158, 171, 0.08);
-}
-
-.googleLoginBtn .nsm7Bb-HzV7m-LgbsSe:focus-within {
-  outline: none;
-  border-color: rgba(145, 158, 171, 0.08);
 }
