--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -213,6 +213,7 @@ a.linkUrl:last-child {
 }
 
 .googleLoginBtn {
+  cursor: pointer;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -241,4 +242,38 @@ a.linkUrl:last-child {
 
 .googleLoginBtn:hover {
   background-color: rgba(145, 158, 171, 0.08);
+}
+
+.googleLoginBtn iframe {
+  width: 100% !important;
+  height: 100% !important;
+  margin: 0 !important;
+  position: absolute !important;
+  top: 0 !important;
+  bottom: 0 !important;
+  right: 0 !important;
+  left: 0 !important;
+}
+
+.googleLoginBtn div[role='button'] {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100% !important;
+  max-height: 100% !important;
+  z-index: 2;
+}
+
+.googleLoginBtn iframe div[role='button'] {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
